# UniSpec

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.agent/: config.toml  skill.md
.agent/modes/: README.md
.agent/modes/default/: mode.toml  skill.md
.agent/modes/simple/: mode.toml  skill.md
.agent/skills/unispec-plan/: skill.md
.agent/skills/unispec-spec/: skill.md
.agent/workflows/: build.md  ingest.md  opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md  osdd:build.md  osdd:spec.md  osdd:verify.md  plan.md  spec.md  test.md  verify.md
.claude/: settings.json
docs/: agent-system-prompt.md  analyze.md  architecture.md  areas.md  build-workflow.md  change-management.md  cli-reference.md  commands.md  config.md  configuration.md  connectors.md  constitution.md  getting-started.md  indexing.md  mcp-integration.md  mcp-tools-reference.md  mcp.md  modes.md  next.md  quick-reference.md  quickstart.md  spec-workflow.md  system-prompt.md  troubleshooting.md  tui.md  workflow.md  workspaces.md
docs/simple-mode/: README.md
src/: main.rs  platypus.rs  version.rs
src/agent/: code_parser.rs  connector.rs  mod.rs  mode.rs
src/agent/auto/: agent.rs  build.rs  ingest.rs  lock.rs  minigit.rs  mod.rs  pr.rs  test.rs  verify.rs
src/agent/integrations/: claude.rs  cline.rs  (+4 more)
src/cli/: mod.rs  model.rs
src/commands/: analyze.rs  area.rs  change.rs  constitution.rs  index.rs  ingest.rs  init.rs  init_editor.rs  mod.rs  next.rs  pull.rs  push.rs  queue.rs  repo.rs  set.rs  spec.rs  topic.rs  workspace.rs
src/fs/: config.rs  index.rs  mod.rs  spec.rs
src/mcp/: mod.rs  server.rs
src/tui/: app.rs  main.rs  mod.rs  platypus.rs  state.rs
unispec-aur/: .SRCINFO  PKGBUILD
(+18 files in other folders)
