[package]
name = "unispec"
version = "0.0.4"
edition = "2021"
description = "Open Source Spec-Driven Development CLI"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
indexmap = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
tabled = { version = "0.15", features = ["ansi"] }
notify = "6.1"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
open = "5"
dirs = "5"

[dev-dependencies]
tempfile = "3.10"
