[package]
name = "unispec"
version = "0.0.5"
edition = "2021"
description = "Open Source Spec-Driven Development CLI"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"
indexmap = { version = "2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
tabled = { version = "0.15", features = ["ansi"] }
notify = "6.1"
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
open = "5"
dirs = "5"
walkdir = "2.4"
regex = "1.10"
itertools = "0.12"

# Tree-sitter for code parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-bash = "0.23"

[dev-dependencies]
tempfile = "3.10"
